Fix PUT photo. Before, put a photo could erase all the database